--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --main-color: #4f46e5;
-      --accent-color: #06b6d4;
-      --bg-color: #f6f8fa;
-      --text-color: #22223b;
+      --main-color: #6c38ff;      /* Violet profond */
+      --accent-color: #00e6d0;    /* Vert menthe */
+      --bg-color: #f5f7fa;
+      --text-color: #232946;
       --card-bg: #fff;
-      --shadow: 0 2px 8px rgba(0,0,0,0.07);
+      --shadow: 0 2px 8px rgba(44,62,80,0.07);
       --transition: 0.2s;
+      --header-gradient: linear-gradient(90deg, #6c38ff 60%, #00e6d0 100%);
     }
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg-color: #181926;
-        --text-color: #f6f8fa;
-        --card-bg: #22223b;
-        --shadow: 0 2px 8px rgba(0,0,0,0.25);
-      }
+    body.dark {
+      --bg-color: #18122B;
+      --text-color: #f7f7f7;
+      --card-bg: #232946;
+      --main-color: #00e6d0;
+      --accent-color: #6c38ff;
+      --shadow: 0 2px 8px rgba(0,0,0,0.25);
+      --header-gradient: linear-gradient(90deg, #232946 60%, #00e6d0 100%);
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -30,25 +32,16 @@
       color: var(--text-color);
       line-height: 1.6;
       transition: background var(--transition), color var(--transition);
+      min-height: 100vh;
     }
     header {
-      background: var(--main-color);
+      background: var(--header-gradient);
       color: #fff;
       padding: 2rem 0 1rem 0;
       text-align: center;
       position: relative;
     }
-    .profile-pic {
-      width: 110px;
-      height: 110px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 4px solid var(--accent-color);
-      margin-bottom: 1rem;
-      background: #fff;
-      box-shadow: var(--shadow);
-    }
-    header h1 { font-size: 2.2rem; margin-bottom: 0.4rem; }
+    header h1 { font-size: 2.3rem; margin-bottom: 0.4rem; letter-spacing: 1px;}
     header h2 { font-weight: 400; font-size: 1.2rem; margin-bottom: 0.5rem; }
     header p { font-size: 1.05rem; }
     nav {
@@ -61,6 +54,7 @@
       font-weight: bold;
       transition: color var(--transition);
       font-size: 1rem;
+      letter-spacing: 0.5px;
     }
     nav a:hover { color: var(--accent-color);}
     .container {
@@ -82,6 +76,7 @@
       font-size: 1.4rem;
       border-left: 4px solid var(--accent-color);
       padding-left: 0.5rem;
+      letter-spacing: 0.5px;
     }
     ul, .timeline, .projects-grid {
       list-style: none;
@@ -133,10 +128,12 @@
       box-shadow: var(--shadow);
       transition: transform var(--transition), box-shadow var(--transition);
       cursor: pointer;
+      border-left: 5px solid var(--main-color);
     }
     .project-card:hover {
       transform: translateY(-5px) scale(1.03);
-      box-shadow: 0 4px 16px rgba(79,70,229,0.13);
+      box-shadow: 0 4px 16px rgba(44,62,80,0.13);
+      border-left: 5px solid var(--accent-color);
     }
     .contact-list li {
       margin-bottom: 0.5rem;
@@ -154,6 +151,9 @@
       transition: background var(--transition);
       box-shadow: var(--shadow);
       margin-bottom: 1rem;
+      cursor: pointer;
+      border: none;
+      font-size: 1rem;
     }
     .btn:hover {
       background: var(--main-color);
@@ -179,12 +179,31 @@
       box-shadow: var(--shadow);
       padding: 1.2rem;
     }
+    .toggle-mode {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background: var(--accent-color);
+      color: #fff;
+      border: none;
+      border-radius: 20px;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background var(--transition);
+      z-index: 10;
+      box-shadow: var(--shadow);
+    }
+    .toggle-mode:hover {
+      background: var(--main-color);
+    }
     @media (max-width: 650px) {
       header h1 { font-size: 1.3rem; }
       .container { padding: 0 0.5rem; }
       .projects-grid { grid-template-columns: 1fr; }
       .skills-list, .languages-list, .interests-list, .education-list { flex-direction: column; gap: 0.5rem;}
-      .profile-pic { width: 80px; height: 80px;}
+      .toggle-mode { top: 0.5rem; right: 0.5rem; padding: 0.4rem 0.7rem;}
     }
   </style>
   <!-- Icônes réseaux sociaux -->
@@ -192,8 +211,9 @@
 </head>
 <body>
   <header>
-    <!-- Remplace le lien ci-dessous par ta photo si tu veux -->
-    <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Maella Makoulo" class="profile-pic">
+    <button class="toggle-mode" id="toggleModeBtn" title="Changer le mode clair/sombre">
+      <i class="fas fa-moon"></i> Mode sombre
+    </button>
     <h1>Maella Makoulo</h1>
     <h2>Étudiante ingénieure en informatique</h2>
     <p>
@@ -343,5 +363,23 @@
       </ul>
     </section>
   </div>
+  <script>
+    // Mode sombre/clair
+    const btn = document.getElementById('toggleModeBtn');
+    const body = document.body;
+    // Système : préfère sombre ?
+    if(window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      body.classList.add('dark');
+      btn.innerHTML = '<i class="fas fa-sun"></i> Mode clair';
+    }
+    btn.addEventListener('click', function() {
+      body.classList.toggle('dark');
+      if(body.classList.contains('dark')) {
+        btn.innerHTML = '<i class="fas fa-sun"></i> Mode clair';
+      } else {
+        btn.innerHTML = '<i class="fas fa-moon"></i> Mode sombre';
+      }
+    });
+  </script>
 </body>
 </html>
